Enum certainty_type {
  known
  potential
}

Enum run_status {
  success
  failed
}

Table incidents {
  id int [pk, increment]
  title varchar
  report_text text [not null]
  source_url varchar
  created_at timestamp [not null, default: `now()`]
}

Table gold_annotations {
  id int [pk, increment]
  incident_id int [not null, ref: > incidents.id]
  label varchar [not null] // GMF label
  certainty certainty_type [not null]
  evidence_snippet text
  created_at timestamp [not null, default: `now()`]
}

Table model_runs {
  id int [pk, increment]
  incident_id int [not null, ref: > incidents.id]
  model_name varchar [not null] // e.g. gpt-4.1, gemini-2.0-flash
  prompt_version varchar [not null, default: 'v1']
  status run_status [not null, default: 'success']
  latency_ms int
  input_tokens int
  output_tokens int
  estimated_cost_usd decimal(10,4)
  raw_response text
  created_at timestamp [not null, default: `now()`]
}

Table predictions {
  id int [pk, increment]
  model_run_id int [not null, ref: > model_runs.id]
  label varchar [not null] // predicted GMF label
  certainty certainty_type [not null]
  evidence_snippet text
  created_at timestamp [not null, default: `now()`]
}